# gha_ml_pipeline

./: .gitattributes  .gitignore  ML_IMPROVEMENT_TRACKING.md  ML_LIFECYCLE_EVALUATION.md  ML_LIFECYCLE_SUMMARY.md  README.md  asset-manifest.json  index.html  robots.txt  sitemap.xml
.github/workflows/: README.md  ci-cd.yml  ci.yml  deploy_react_client.yml  fetch_data.yml  ml_pipeline.yml  pipeline.yml  (+3 more)
favicon/: manifest.json
models/: challenger_20250627_204207.csv  challenger_20250629_123201.csv  challenger_20250703_193922.csv  challenger_20250704_202547.csv  challenger_20250704_203427.csv  challenger_20250704_204534.csv  challenger_20250705_212226.csv  challenger_20250706_003424.csv  challenger_20250713_003501.csv  challenger_20250720_003551.csv  challenger_20250727_003546.csv  challenger_20250803_003558.csv  challenger_20250810_003541.csv  challenger_20250928_073417.csv  challenger_20251005_003231.csv  challenger_20251012_003119.csv  challenger_20251019_003316.csv  challenger_20251026_003224.csv  challenger_20251102_003303.csv  challenger_20251109_003324.csv  challenger_20251116_003329.csv  challenger_20251123_003452.csv  challenger_20251130_003500.csv  challenger_20251207_003501.csv  challenger_20251214_003527.csv  challenger_20251221_003510.csv  challenger_20251228_003625.csv  challenger_20260104_003645.csv  challenger_20260111_003628.csv  challenger_20260118_003611.csv  challenger_20260125_003708.csv  challenger_20260201_004402.csv  challenger_20260208_004810.csv  challenger_20260215_004208.csv  challenger_20260222_004020.csv  challenger_20260301_004337.csv  challenger_20260308_004008.csv  challenger_20260315_004440.csv  challenger_20260322_004151.csv  challenger_20260329_004529.csv  (+15 more)
notebooks/: btc_price_analysis.ipynb
python_train/: README.md  analysis.ipynb  environment.yml  linear_regression_training.ipynb  pyproject.toml  train.py
python_train/src/: model_io.py  train.py
python_train/src/data/: load_data.py
python_train/src/models/: train_model.py
python_train/src/utils/: save_weights.py
python_train/tests/: test_model_io.py  test_train.py
react_client/: README.md  package-lock.json  package.json
rust_fetch/: Cargo.toml  ReadMe.md
rust_fetch/src/: lib.rs  main.rs
rust_fetch/src/api_clients/: coiny_bubble.rs  mod.rs
rust_fetch/tests/: fetch_dedup.rs
scripts/: ml_health_check.py
wiki/: Architecture.md  CI-CD.md  Data.md  Frontend.md  Home.md  Training.md
(+421 files in other folders)
