[tool.poetry]
name = "python_train"
version = "0.1.0"
description = "Train ML model to predict BTC price"
authors = ["Elar Saks <elarsaks@gmail.com>"]
license = "MIT"
package-mode = false
packages = []

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
polars = "^0.19.0"
scikit-learn = "^1.7.0"
pyarrow = "^20.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"

[build-system]
requires = ["poetry-core>=2.1.3"]
build-backend = "poetry.core.masonry.api"
