[tool.poetry]
name = "python_train"
version = "0.1.0"
description = "BTC price prediction training"
authors = ["Elar Saks elarsaks@gmailcom"]

[tool.poetry.dependencies]
python = "^3.10"
polars = "*"
scikit-learn = "*"

[tool.poetry.group.dev.dependencies]
pytest = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
