[package]
name = "gha_ml_pipeline"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.12", features = ["json", "blocking"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
polars = { version = "0.32", features = ["parquet", "json"] }
tempfile = "3.3"

[[bin]]
name = "fetch_data"
path = "src/bin/fetch_data.rs"

[[bin]]
name = "convert_jsonl_parquet"
path = "src/bin/convert_jsonl_parquet.rs"

[[bin]]
name = "validate_jsonl"
path = "src/bin/validate_jsonl.rs"
